--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </div>
         <div id="final" class="hidden">
             <h1>Мама, я тебя люблю</h1>
+            <p id="codeLines">Сайт написан на <span id="lineCount">0</span> строк кода</p>
         </div>
     </div>
     <script src="js/script.js"></script>
