--- a/index.html
+++ b/index.html
@@ -3,33 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Анализ</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Портфолио Fills OFFICIAL</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <button id="analyzeBtn">Анализ</button>
-        <div id="loading" class="hidden">
-            <div class="loader"></div>
-            <p>Идёт анализ...</p>
-        </div>
-        <div id="hack" class="hidden">
-            <div class="hack-text">ВЗЛОМ СИСТЕМЫ...</div>
-        </div>
-        <div id="error" class="hidden">
-            <div class="error-text">ОШИБКА! СИСТЕМА СЛОМАНА!</div>
-        </div>
-        <div id="repair" class="hidden">
-            <p>Идёт починка системы...</p>
-            <div class="progress-bar">
-                <div class="progress"></div>
-            </div>
-        </div>
-        <div id="final" class="hidden">
-            <h1>Мама, я тебя люблю</h1>
-            <p id="codeLines">Сайт написан на <span id="lineCount">143</span> строчках кода</p>
-        </div>
+    <div class="hack-background">
+        <div class="hack-text" style="left: 10%;">9 7</div>
+        <div class="hack-text" style="left: 20%;">8 #</div>
+        <div class="hack-text" style="left: 30%;">( $</div>
+        <div class="hack-text" style="left: 40%;">92737</div>
+        <div class="hack-text" style="left: 50%;">$919</div>
+        <div class="hack-text" style="left: 60%;">*!@8293</div>
+        <div class="hack-text" style="left: 70%;">( )</div>
     </div>
-    <script src="js/script.js"></script>
+
+    <div class="content">
+        <div class="avatar"></div>
+        <div class="nickname">Fills OFFICIAL</div>
+        <div class="skills">
+            <div>Мои знания в кодерстве</div>
+            <div>Java - превосходно</div>
+            <div>HTML - превосходно</div>
+            <div>CSS - превосходно</div>
+            <div>Моделирование - превосходно</div>
+        </div>
+        <a href="https://t.me/fillsofficial" class="contact-button">Связаться со мной</a>
+    </div>
+
+    <div class="footer">
+        Fills OFFICIAL | Все права защищены 2025 ©
+    </div>
 </body>
 </html>
