--- a/index.html
+++ b/index.html
@@ -1,37 +1,25 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Портфолио Fills OFFICIAL</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Вход через Telegram</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="hack-background">
-        <div class="hack-text" style="left: 10%;">9 7</div>
-        <div class="hack-text" style="left: 20%;">8 #</div>
-        <div class="hack-text" style="left: 30%;">( $</div>
-        <div class="hack-text" style="left: 40%;">92737</div>
-        <div class="hack-text" style="left: 50%;">$919</div>
-        <div class="hack-text" style="left: 60%;">*!@8293</div>
-        <div class="hack-text" style="left: 70%;">( )</div>
-    </div>
+  <div class="container">
+    <h1>Вход через Telegram</h1>
+    <div id="telegram-login"></div>
+    <p>Ваш username: <span id="username">Не авторизован</span></p>
+    <p>Ваша реферальная ссылка: <a id="referral-link" href="#">Не сгенерирована</a></p>
+  </div>
 
-    <div class="content">
-        <div class="avatar"></div>
-        <div class="nickname">Fills OFFICIAL</div>
-        <div class="skills">
-            <div>Мои знания в кодерстве</div>
-            <div>Java - превосходно</div>
-            <div>HTML - превосходно</div>
-            <div>CSS - превосходно</div>
-            <div>Моделирование - превосходно</div>
-        </div>
-        <a href="https://t.me/fillsofficial" class="contact-button">Связаться со мной</a>
-    </div>
-
-    <div class="footer">
-        Fills OFFICIAL | Все права защищены 2025 ©
-    </div>
+  <!-- Telegram Login Widget -->
+  <script async src="https://telegram.org/js/telegram-widget.js?22"
+          data-telegram-login="api_by_fteam_bot"
+          data-size="large"
+          data-auth-url="https://aboba.qwertyuiop19818.workers.dev/callback"
+          data-request-access="write"></script>
+  <script src="script.js"></script>
 </body>
 </html>
