--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Вход через Telegram</title>
+  <title>Вход через Telegram на fillsteam.ru</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,11 +14,10 @@
     <p>Ваша реферальная ссылка: <a id="referral-link" href="#">Не сгенерирована</a></p>
   </div>
 
-  <!-- Telegram Login Widget -->
+  <!-- Telegram Login Widget без серверного callback -->
   <script async src="https://telegram.org/js/telegram-widget.js?22"
           data-telegram-login="api_by_fteam_bot"
           data-size="large"
-          data-auth-url="https://aboba.qwertyuiop19818.workers.dev/callback"
           data-request-access="write"></script>
   <script src="script.js"></script>
 </body>
