--- a/index.html
+++ b/index.html
@@ -3,22 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Вход через Telegram на fillsteam.ru</title>
+  <title>Спасибо за посещение</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <h1>Вход через Telegram</h1>
-    <div id="telegram-login"></div>
-    <p>Ваш username: <span id="username">Не авторизован</span></p>
-    <p>Ваша реферальная ссылка: <a id="referral-link" href="#">Не сгенерирована</a></p>
+    <h1 class="neon-text">Спасибо за посещение сайта ❣️</h1>
   </div>
-
-  <!-- Telegram Login Widget без серверного callback -->
-  <script async src="https://telegram.org/js/telegram-widget.js?22"
-          data-telegram-login="api_by_fteam_bot"
-          data-size="large"
-          data-request-access="write"></script>
-  <script src="script.js"></script>
 </body>
 </html>
