--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Спасибо за посещение</title>
+  <title>Telegram Login Test</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <h1 class="neon-text">Спасибо за посещение сайта ❣️</h1>
+    <h1>Авторизация через Telegram</h1>
+    <div id="telegram-login"></div>
+    <p id="status">Статус: Ожидание авторизации...</p>
   </div>
+
+  <script async src="https://telegram.org/js/telegram-widget.js?22"
+          data-telegram-login="api_by_fteam_bot"
+          data-size="large"
+          data-auth-url="https://v0-testapi.vercel.app/api/telegram"
+          data-request-access="write">
+  </script>
+  <script src="script.js"></script>
 </body>
 </html>
