--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Авторизация через Telegram</h1>
     <div id="telegram-login"></div>
     <p id="status">Статус: Ожидание авторизации...</p>
+    <p id="debug">Отладка: Ожидание данных...</p> <!-- Добавлено для отладки -->
   </div>
 
   <script async src="https://telegram.org/js/telegram-widget.js?22"
