--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         }
 
         fetch('https://v0-testapi.vercel.app/api/telegram', {
-          method: 'GET',
+          method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(user)
         })
