--- a/index.html
+++ b/index.html
@@ -18,46 +18,43 @@
   <script async src="https://telegram.org/js/telegram-widget.js?22"
           data-telegram-login="api_by_fteam_bot"
           data-size="large"
+          data-onauth="onTelegramAuth(user)"
           data-auth-url="https://v0-testapi.vercel.app/api/telegram"
           data-request-access="write">
   </script>
 
-  <script>
-    // Проверка загрузки и настройка callback
-    document.getElementById('loading').textContent = 'Загрузка виджета: Проверка...';
-    window.TelegramLoginWidget = {
-      dataOnauth: (user) => {
-        document.getElementById('debug').textContent = 'Получены данные: ' + JSON.stringify(user);
-        if (!user || !user.id || !user.hash) {
-          document.getElementById('status').textContent = 'Ошибка: недействительные данные';
-          document.getElementById('debug').textContent += ' (Данные некорректны)';
-          return;
-        }
-
-        fetch('https://v0-testapi.vercel.app/api/telegram', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(user)
-        })
-        .then(response => {
-          if (!response.ok) throw new Error(`HTTP error! Status: ${response.status}`);
-          return response.json();
-        })
-        .then(data => {
-          document.getElementById('status').textContent = data.message || 'Успешно, но без сообщения';
-          document.getElementById('debug').textContent += ' | Ответ: ' + JSON.stringify(data);
-        })
-        .catch(error => {
-          document.getElementById('status').textContent = `Ошибка: ${error.message}`;
-          document.getElementById('debug').textContent += ' | Ошибка: ' + error.message;
-        });
-      },
-      onAuthError: (error) => {
-        document.getElementById('status').textContent = 'Ошибка авторизации: ' + error;
-        document.getElementById('debug').textContent += ' | Ошибка: ' + error;
+  <script type="text/javascript">
+    function onTelegramAuth(user) {
+      document.getElementById('debug').textContent = 'Получены данные: ' + JSON.stringify(user);
+      if (!user || !user.id || !user.hash) {
+        document.getElementById('status').textContent = 'Ошибка: недействительные данные';
+        document.getElementById('debug').textContent += ' (Данные некорректны)';
+        return;
       }
-    };
-    document.getElementById('loading').textContent = 'Загрузка виджета: Успешно';
+
+      fetch('https://v0-testapi.vercel.app/api/telegram', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(user)
+      })
+      .then(response => {
+        if (!response.ok) throw new Error(`HTTP error! Status: ${response.status}`);
+        return response.json();
+      })
+      .then(data => {
+        document.getElementById('status').textContent = data.message || 'Успешно, но без сообщения';
+        document.getElementById('debug').textContent += ' | Ответ: ' + JSON.stringify(data);
+      })
+      .catch(error => {
+        document.getElementById('status').textContent = `Ошибка: ${error.message}`;
+        document.getElementById('debug').textContent += ' | Ошибка: ' + error.message;
+      });
+    }
+
+    // Проверка загрузки
+    window.addEventListener('load', () => {
+      document.getElementById('loading').textContent = 'Загрузка виджета: Успешно';
+    });
   </script>
 </body>
 </html>
