--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neon Download Site</title>
-    <link rel="stylesheet" href="assets/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Файловый магазин</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1 class="neon-text">Neon Download</h1>
-        <p class="sub-text">Скачай крутой файл прямо сейчас!</p>
-        <a href="assets/ByeByeDPI-v.1.6.4-arm64-v8a.apk" download class="neon-button">Скачать файл</a>
+  <div class="container">
+    <h1>Файловый магазин</h1>
+    <div class="file-list">
+      <div class="file-item">
+        <img src="images/file1.jpg" alt="Example File" class="file-image">
+        <h2>Example File</h2>
+        <a href="articles/file1.html" class="btn">Подробнее</a>
+      </div>
     </div>
+  </div>
 </body>
 </html>
