--- a/index.html
+++ b/index.html
@@ -9,13 +9,8 @@
 <body>
   <div class="container">
     <h1>Файловый магазин</h1>
-    <div class="file-list">
-      <div class="file-item">
-        <img src="images/file1.jpg" alt="Example File" class="file-image">
-        <h2>Example File</h2>
-        <a href="articles/file1.html" class="btn">Подробнее</a>
-      </div>
-    </div>
+    <div class="file-list" id="file-list"></div>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
