--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
   <div class="container">
     <h1>Файловый магазин</h1>
+    <div id="loading">Загрузка файлов...</div>
+    <div id="error" style="color: #ff4d4d;"></div>
     <div class="file-list" id="file-list"></div>
   </div>
   <script src="script.js"></script>
