--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Fills Official</title>
     <style>
         /* Сброс стилей */
@@ -18,6 +18,7 @@
             overflow: hidden;
             background: #000;
             color: #fff;
+            touch-action: pan-x pan-y; /* Отключает зум на тач-устройствах */
         }
 
         /* Анимированный градиентный фон */
@@ -243,5 +244,25 @@
         2025г. Все права защищены ©
     </div>
 
+    <!-- Блокировка масштабирования через JS (на всякий случай) -->
+    <script>
+        // Отключаем зум колёсиком + Ctrl
+        document.addEventListener('wheel', function(e) {
+            if (e.ctrlKey) {
+                e.preventDefault();
+            }
+        }, { passive: false });
+
+        // Отключаем жесты (пинч-зум)
+        document.addEventListener('gesturestart', function(e) {
+            e.preventDefault();
+        });
+        document.addEventListener('gesturechange', function(e) {
+            e.preventDefault();
+        });
+        document.addEventListener('gestureend', function(e) {
+            e.preventDefault();
+        });
+    </script>
 </body>
 </html>
